clusters/cultural-repo-cluster/apps/cultural-repo/environments/staging/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cultural-repo-backend
spec:
  template:
    spec:
      containers:
      - name: cultural-repo-backend
        image: registry.gitlab.com/panos.soilem/comic-registry/staging/backend:1.0.81 # {"$imagepolicy": "flux-system:cultural-repo-backend-staging"}
