clusters/cultural-repo-cluster/apps/cultural-repo/environments/staging/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress-backend
  annotations:
    # https redirect
    traefik.ingress.kubernetes.io/router.middlewares: cultural-repo-web-staging-redirect-https-backend-staging@kubernetescrd
spec:
  tls:
    - hosts:
      - 'api.stg.repo.skopelos.gr'
      - '*.api.stg.repo.skopelos.gr'
      secretName: cultural-repo-app-tls-backend
  rules:
  - host: 'api.stg.repo.skopelos.gr'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cultural-repo-service-backend
              port:
                number: 80
        - path: /media/
          pathType: Prefix
          backend:
            service:
              name: nginx-media-server-service
              port:
                number: 80
  - host: '*.api.stg.repo.skopelos.gr'
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cultural-repo-service-backend
              port:
                number: 80
        - path: /media/
          pathType: Prefix
          backend:
            service:
              name: nginx-media-server-service
              port:
                number: 80
