clusters/cultural-repo-cluster/apps/cultural-repo/environments/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cultural-repo-ingress
  annotations:
    # https redirect
    traefik.ingress.kubernetes.io/router.middlewares: cultural-repo-web-staging-redirect-https-staging@kubernetescrd
spec:
  tls:
    - hosts:
      - stg.repo.skopelos.gr
      secretName: cultural-repo-app-tls
  rules:
  - host: stg.repo.skopelos.gr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cultural-repo-service
              port:
                number: 80
